stop hiding scrollbar across the site

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -23,10 +23,6 @@
   font-weight: 100;
   animation: blinking-cursor 0.8s cubic-bezier(0.68, 0.01, 0.01, 0.99) 0s infinite;
 }
-
-::-webkit-scrollbar {
-  display: none;
-}
  
 @keyframes blinking-cursor {
   0% {
